Fixed spacing on custom links added by text editor
Fixed word spacing bug in texts added by the new page editor. This bug caused inserted links to have extended spacing between words.

This 'bug' was a previous feature added to display links further apart for easier readability. The feature didn't scale well with the newly added page editor which allowed users to add their own links to edited texts, causing the bug.

The extended spacing was achieved with the 'padding' CSS tag. I simply removed the tag from all an HTML tags and made it into its own class, 'spacing'. I added the class to every element on the site that previously depended on this tag.

--- a/littlelink/css/skeleton-dark.css
+++ b/littlelink/css/skeleton-dark.css
@@ -39,7 +39,6 @@
   max-width: 600px;
   text-align: center;
   margin: 0 auto;
-  padding: 0 20px;
   box-sizing: border-box; }
 .column {
   position: center;
@@ -110,6 +109,9 @@ a {
 a:hover {
   color: #0085FF; }
 
+.spacing {
+  padding: 0 10px;
+}
 
 /* Code
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
