--- a/littlelink/css/skeleton-light.css
+++ b/littlelink/css/skeleton-light.css
@@ -39,7 +39,6 @@
   max-width: 600px;
   text-align: center;
   margin: 0 auto;
-  padding: 0 20px;
   box-sizing: border-box; }
 .column {
   position: center;
@@ -106,11 +105,13 @@ p {
 a {
   color: #0085FF; 
   text-decoration: none;
-  padding: 0px 10px;
 }
 a:hover {
   color: #0085FF; }
 
+.spacing {
+  padding: 0 10px;
+}
 
 /* Code
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
